Changed signup post route from /onboarding to /signup and got rid of routes that we don't need

--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -1,6 +1,6 @@
 <div class="onboarding">
     <h2 class="neon">CREATE ACCOUNT</h2>
-    <form id="signupForm" action="/users/onboarding" method="post">
+    <form id="signupForm" action="/users/signup" method="post">
         <section>
             <label for="email">
                 Email
