--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -13,7 +13,7 @@
             </label>
 
             <div id="borderContainer">
-                <div class="buttonInput">
+                <div class="borderInput">
                     <label id="genderLabel">Gender</label>
                     <div class="multipleInputContainer">
                         <input id="genderMan" type="radio" name="gender" value="man"/>
@@ -25,12 +25,12 @@
                     </div>
                 </div>
 
-                <div class="buttonInput">
+                <div class="borderInput">
                     <label for="showGender" id="showGenderLabel">Show gender on my profile</label>
                     <input id="showGender" type="checkbox" name="showGender">
                 </div>
 
-                <div class="buttonInput">
+                <div class="borderInput">
                     <label id="pronounsLabel">Pronouns</label>
                     <div class="multipleInputContainer">
                         <input id="genderMan" type="radio" name="gender" value="man"/>
@@ -42,14 +42,14 @@
                     </div>
                 </div>
 
-                <div class="buttonInput">
+                <div class="borderInput">
                     <div class="showPronouns">
                         <label for="showPronouns" id="showPronounsLabel">Show pronouns on my profile</label>
                         <input id="showPronouns" type="checkbox" name="showPronouns">
                     </div>
                 </div>
 
-                <div class="buttonInput">
+                <div class="borderInput">
                     <label id="genderInterestLabel">Who are you interested in?</label>
                     <div class="multipleInputContainer">
                         <input id="likeMen" type="radio" name="genderInterest" value="Men"/>
