--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -16,7 +16,9 @@
                 Confirm Password
                 <input id="confirmPassword" type="password" name="conUserPassword" placeholder="Confirm Password" value="{{conUserPassword}}" required/>
             </label>
+            <div>
+                <button id="signupButton" type="submit" class="homepage-buttons">Submit</button>
+            </div>
         </section>
-        <button id="signupButton" type="submit" class="homepage-buttons">Submit</button>
     </form>
 </div>
