--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -21,6 +21,10 @@ h1 {
     font-size: 60px;
 }
 
+label {
+    color: white;
+}
+
 #homepageH1 {
     color: #fff;
     text-shadow:
@@ -212,7 +216,10 @@ h2 {
 }
 
 #onboardingButton {
-    margin-top: 5rem;
+    margin-top: 40px;
+    font-size: 25px;
+    height: fit-content;
+
 }
 
 .multi-select-container {
@@ -248,8 +255,70 @@ h2 {
     margin-top: 30px;
 }
 
+/* Filters Page */
+.slideContainer {
+    width: 50%; /* Width of the outside container */
+    margin: 20px auto;
+}
 
+ /*The slider itself*/
+ .slider {
+     -webkit-appearance: none;
+     width: 100%;
+     height: 15px;
+     border-radius: 5px;
+     background: #d3d3d3;
+     outline: none;
+     opacity: 0.7;
+     -webkit-transition: .2s;
+     transition: opacity .2s;
+ }
 
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: white;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: white;
+    cursor: pointer;
+}
+
+#ageRange{
+    text-align: center;
+}
+
+#genderInterestBorder {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#locationContainer label {
+    font-size: 20px;
+}
+
+#locationContainer select {
+    font-size: 19px;
+}
+
+#filtersBorder {
+    margin-top: 50px;
+}
 
 
 
