--- a/views/users/location.handlebars
+++ b/views/users/location.handlebars
@@ -2,7 +2,7 @@
     <h2 class="neon">CREATE ACCOUNT</h2>
     <div id="locationContainer">
         <img class="location-img" src="../../../public/images/Location_Symbol.jpg" alt="Location Symbol">
-        <h3 class="locationH3">We need your location to show who is nearby</h3>
+        <h3>We need your location to show who is nearby</h3>
         <p>You will need to grant DateSpot access to your location, so we can show you awesome people
             and date spots in your area.</p>
         <div class="form-group hidden" id="error-container">
@@ -12,6 +12,8 @@
         <button  id="locationButton" type="submit" class="homepage-buttons">Allow location access</button>
     </div>
 </div>
+<p hidden id="id">{{id}}</p>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
