--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -233,6 +233,9 @@ h2 {
 
 .alert {
     margin-bottom: 0;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #borderContainer {
@@ -254,6 +257,22 @@ h2 {
 
 #locationContainer {
     margin-top: 30px;
+}
+
+#loader {
+    border: 16px solid white; /* Light grey */
+    border-top: 16px solid rgb(76, 0, 19); /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 /* Filters Page */
@@ -323,50 +342,45 @@ h2 {
 
 /* Images Page */
 
-/*#image {*/
-/*    max-width: 100%;*/
-/*    max-height: 100%;*/
+/*.container {*/
+/*    !*display: grid;*!*/
+/*    !*height: 100%;*!*/
+/*    !*place-items: center;*!*/
+/*    !*text-align: center;*!*/
+/*    margin: 20px auto;*/
+/*    height: 350px;*/
+/*    width: 430px;*/
 /*}*/
 
-.container {
-    /*display: grid;*/
-    /*height: 100%;*/
-    /*place-items: center;*/
-    /*text-align: center;*/
-    margin: 20px auto;
-    height: 350px;
-    width: 430px;
-}
+/*.container div {*/
+/*    color: white;*/
+/*    font-size: 20px;*/
+/*}*/
 
-.container div {
-    color: white;
-    font-size: 20px;
-}
+/*.container .wrapper {*/
+/*    height: 300px;*/
+/*    width: 100%;*/
+/*    border: 2px dashed black;*/
+/*    background: white;*/
+/*    border-radius: 10px;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    overflow: hidden;*/
+/*}*/
 
-.container .wrapper {
-    height: 300px;
-    width: 100%;
-    border: 2px dashed black;
-    background: white;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
+/*.wrapper .image {*/
+/*    position: absolute;*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
 
-.wrapper .image {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.wrapper .image img {
-    height: 100%;
-    width: 100%;
-}
+/*.wrapper .image img {*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*}*/
 
 
 
