--- a/views/users/images.handlebars
+++ b/views/users/images.handlebars
@@ -1,20 +1,20 @@
-<div class="container">
+<div>
 
     <h2 class="neon">CREATE ACCOUNT</h2>
     <h3>Now it's time to upload some photos</h3>
-    <div class="wrapper">
-        <div class="image">
-            <img src="../../../public/images/Location_Symbol.jpg">
-        </div>
-        <div class="content">
-            <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
-            <div class="text">No file chosen, yet!<i class="fas fa-cloud-upload-alt"></i></div>
-        </div>
-        <div id="cancel-btn"><i class="fas fa-times"></i></div>
-        <div class="file-name">File name here</div>
-    </div>
-    <input id="default-btn" type="file">
-    <button id="custom-btn">Choose a file</button>
+<!--    <div class="wrapper">-->
+<!--        <div class="image">-->
+<!--            <img src="../../../public/images/Location_Symbol.jpg">-->
+<!--        </div>-->
+<!--        <div class="content">-->
+<!--            <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>-->
+<!--            <div class="text">No file chosen, yet!<i class="fas fa-cloud-upload-alt"></i></div>-->
+<!--        </div>-->
+<!--        <div id="cancel-btn"><i class="fas fa-times"></i></div>-->
+<!--        <div class="file-name">File name here</div>-->
+<!--    </div>-->
+<!--    <input id="default-btn" type="file">-->
+<!--    <button id="custom-btn">Choose a file</button>-->
 </div>
 <p hidden id="id">{{id}}</p>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
