Error handling all done. Lats thing to do for onboarding is images page and DB storage

--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -27,6 +27,7 @@
 
                 <div class="borderInput">
                     <label for="showGender" id="showGenderLabel">Show gender on my profile</label>
+                    <input type="hidden" name="showGender" value="off">
                     <input id="showGender" type="checkbox" name="showGender">
                 </div>
 
@@ -45,6 +46,7 @@
                 <div class="borderInput">
                     <div class="showPronouns">
                         <label for="showPronouns" id="showPronounsLabel">Show pronouns on my profile</label>
+                        <input type="hidden" name="showPronouns" value="off">
                         <input id="showPronouns" type="checkbox" name="showPronouns">
                     </div>
                 </div>
