beginning to work on dashboard

--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -1,3 +1,31 @@
-<p>DASHBOARD</p>
+<nav>
+    <button id="login-button" class="homepage-buttons" onclick="goToLogout();">Sign out</button>
+</nav>
+<h2 class="neon" id="dashH2">DASHBOARD</h2>
+<div class="dashboard">
+    <div id="swiper">
+        <div class="card" style="--i:0">
+            <img src="https://source.unsplash.com/random.1000x1000?sky" alt="">
+        </div>
+        <div class="card" style="--i:1">
+            <img src="https://source.unsplash.com/random.1000x1000?landscape" alt="">
+        </div>
+        <div class="card" style="--i:2">
+            <img src="https://source.unsplash.com/random.1000x1000?ocean" alt="">
+        </div>
+        <div class="card" style="--i:3">
+            <img src="https://source.unsplash.com/random.1000x1000?mountain" alt="">
+        </div>
+        <div class="card" style="--i:4">
+            <img src="https://source.unsplash.com/random.1000x1000?forest" alt="">
+        </div>
+    </div>
+</div>
 
-<a href="/users/logout">Click here to log out</a>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+<script src="/public/js/dashboard.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+        crossorigin="anonymous"></script>
