--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 * {
-    font-family: "Exo 2", serif
+    font-family: "Exo 2", serif;
 }
 
 p {
@@ -121,7 +121,12 @@ nav {
 
 }
 
-/* Home Page */
+ /*Home Page*/
+
+#dashH2 {
+    margin: 0;
+}
+
 .overlay {
     width: 100vw;
     height: 100vh;
@@ -398,48 +403,43 @@ h2 {
     height: min-content;
 }
 
+/* Dashboard Page */
+.dashboard {
+    overflow: hidden;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 70px;
+}
 
+#swiper {
+    height: 70vh;
+    aspect-ratio: 2 / 3;
+    perspective: 1000px;
+    perspective-origin: center 50%;
+    transform-style: preserve-3d;
+    position: relative;
+}
 
+.card {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform: translateZ(calc(-30px * var(--i)))
+    translateY(calc(-20px * var(--i))) rotate(calc(-4deg * var(--i)));
+    filter: drop-shadow(2px 2px 20px rgba(0, 0, 0, 0.5));
+    cursor: pointer;
+    user-select: none;
+}
 
-/*.container {*/
-/*    !*display: grid;*!*/
-/*    !*height: 100%;*!*/
-/*    !*place-items: center;*!*/
-/*    !*text-align: center;*!*/
-/*    margin: 20px auto;*/
-/*    height: 350px;*/
-/*    width: 430px;*/
-/*}*/
+.card img {
+    width: 90%;
+    height: 90%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 20px;
+}
 
-/*.container div {*/
-/*    color: white;*/
-/*    font-size: 20px;*/
-/*}*/
-
-/*.container .wrapper {*/
-/*    height: 300px;*/
-/*    width: 100%;*/
-/*    border: 2px dashed black;*/
-/*    background: white;*/
-/*    border-radius: 10px;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    overflow: hidden;*/
-/*}*/
-
-/*.wrapper .image {*/
-/*    position: absolute;*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-
-/*.wrapper .image img {*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*}*/
 
 
 
