Figuring out this good ole dashboard

--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -3,29 +3,28 @@
 </nav>
 <h2 class="neon" id="dashH2">DASHBOARD</h2>
 <div class="dashboard">
-    <div id="swiper">
-        <div class="card" style="--i:0">
-            <img src="https://source.unsplash.com/random.1000x1000?sky" alt="">
+    <div class="chat-container">Chat Container</div>
+    <div class="swipe-container">
+<!--        <ion-icon id="dislike" name="heart-dislike"></ion-icon>-->
+        <div id="swiper">
         </div>
-        <div class="card" style="--i:1">
-            <img src="https://source.unsplash.com/random.1000x1000?landscape" alt="">
+        <div class="swipeInstructionDiv">
+            <p>Dislike</p>
+            <p>Like</p>
         </div>
-        <div class="card" style="--i:2">
-            <img src="https://source.unsplash.com/random.1000x1000?ocean" alt="">
-        </div>
-        <div class="card" style="--i:3">
-            <img src="https://source.unsplash.com/random.1000x1000?mountain" alt="">
-        </div>
-        <div class="card" style="--i:4">
-            <img src="https://source.unsplash.com/random.1000x1000?forest" alt="">
-        </div>
+
+<!--        <ion-icon id="like" name="heart"></ion-icon>-->
     </div>
+
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
-<script src="/public/js/dashboard.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
+<script src="/public/js/dashboard/card.js"></script>
+<script src="/public/js/dashboard/dashboard.js"></script>
+<!--<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>-->
+<!--<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>-->
