--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -405,15 +405,15 @@ h2 {
 
 /* Dashboard Page */
 .dashboard {
-    overflow: hidden;
+    /*overflow: hidden;*/
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
-    margin-top: 70px;
+    /*align-items: center;*/
+    margin-top: 125px;
 }
 
 #swiper {
-    height: 70vh;
+    height: 500px;
     aspect-ratio: 2 / 3;
     perspective: 1000px;
     perspective-origin: center 50%;
@@ -423,21 +423,46 @@ h2 {
 
 .card {
     width: 100%;
-    height: 100%;
+    height: 600px;
     position: absolute;
     transform: translateZ(calc(-30px * var(--i)))
     translateY(calc(-20px * var(--i))) rotate(calc(-4deg * var(--i)));
-    filter: drop-shadow(2px 2px 20px rgba(0, 0, 0, 0.5));
+    /*filter: drop-shadow(2px 2px 20px rgba(0, 0, 0, 1));*/
     cursor: pointer;
     user-select: none;
 }
 
 .card img {
-    width: 90%;
-    height: 90%;
+    width: 75%;
+    height: 75%;
     object-fit: cover;
     object-position: 50% 50%;
     border-radius: 20px;
+}
+
+.swipe-container {
+    float: right;
+    margin-right: 50px;
+    width: 50%;
+}
+
+.chat-container {
+    width: 50%;
+    color: white;
+    float: left;
+    margin-left: 100px;
+}
+
+.swipeInstructionDiv {
+    width: 80%;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.swipeInstructionDiv p {
+    font-weight: bold;
+    font-size: 20px;
 }
 
 
