--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -454,7 +454,7 @@ h2 {
 }
 
 .swipeInstructionDiv {
-    width: 80%;
+    width: 315px;
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
