--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -3,7 +3,11 @@
 </nav>
 <h2 class="neon" id="dashH2">DASHBOARD</h2>
 <div class="dashboard">
-    <div class="chat-container">Chat Container</div>
+    <div class="matches-container">
+        <h3>Matches</h3>
+        <ul id="matchesList">
+        </ul>
+    </div>
     <div class="swipe-container">
 <!--        <ion-icon id="dislike" name="heart-dislike"></ion-icon>-->
         <div id="swiper">
@@ -17,7 +21,7 @@
     </div>
 
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
