reverted changes, hopefully works this time

--- a/views/users/filters.handlebars
+++ b/views/users/filters.handlebars
@@ -40,6 +40,7 @@
         <input name= '_method' value="patch" type="hidden"/>
     </form>
 </div>
+<p hidden id="id">{{id}}</p>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
