--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -1,6 +1,6 @@
 <div class="onboarding">
     <h2 class="neon">CREATE ACCOUNT</h2>
-    <form id="onboardingForm" action="/users/onboarding" method="post">
+    <form id="onboardingForm" action="/users/onboarding/{{id}}" method="post">
         <section>
             <label for="firstName">
                 First Name
