Login/Signup page redirect links
Added links to the login/signup pages so users can navigate between them.

--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -17,6 +17,7 @@
             <div>
                 <button id="logInButton" type="submit" class="homepage-buttons">Login</button>
             </div>
+            <a href="/users/signup" class="redirect-to-signup">Don't have an account? Sign up here!</a>
         </section>
     </form>
 </div>
