--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -21,6 +21,7 @@
             <div>
                 <button id="signupButton" type="submit" class="homepage-buttons">Submit</button>
             </div>
+            <a href="/users/login" class="redirect-to-login">Already have an account? Login here!</a>
         </section>
     </form>
 </div>
