--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -147,9 +147,22 @@ nav {
     margin-right: 20%;
 }
 
+/* Login Page */
+.redirect-to-signup {
+    color: white;
+    font-size: 1.75rem;
+    font-weight: bold;
+}
+
 /* Signup Page */
 #signupButton {
     margin-top: 10px;
+}
+
+.redirect-to-login {
+    color: white;
+    font-size: 1.75rem;
+    font-weight: bold;
 }
 
 
