--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -370,11 +370,11 @@ h2 {
 }
 
 .grid .form-element img {
-    /*width: 100%;*/
-    /*height: 100%;*/
+    width: 250px;
+    height: 201px;
     object-fit: cover;
-    max-width: 100%;
-    max-height: 250px;
+    /*max-width: 100%;*/
+    /*max-height: 250px;*/
 
 }
 
@@ -397,6 +397,7 @@ h2 {
 .grid .form-element div {
     position: relative;
     height: 40px;
+    width: 250px;
     margin-top: -40px;
     background: rgba(0,0,0,0.5);
     text-align: center;
@@ -408,6 +409,7 @@ h2 {
 
 .grid .form-element div span {
     font-size: 30px;
+    /*width: max-content;*/
 }
 
 #imagesContainer h3 {
@@ -417,6 +419,10 @@ h2 {
 #imagesContainer2 {
     margin-top: 50px;
     height: min-content;
+}
+
+#imagesButton {
+    margin-top: 15px;
 }
 
 /* Dashboard Page */
