--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -524,6 +524,72 @@ h2 {
 
 }
 
+  
+  #account-dropdown-container {
+    text-transform: uppercase;
+    font-size: 15px;
+    border-radius: 10px;
+    border-color: white;
+    border: 1px solid white;
+    background: linear-gradient(to bottom, rgb(76, 0, 19), black);
+    position: absolute;
+    list-style: none;
+  }
+  
+  #account-dropdown {
+    color: #fff;
+    border-radius: 10px;
+    border-color: white;
+    display: block;
+    float: left;
+    padding: 1rem;
+    justify-content: center;
+    position: relative;
+    text-decoration: none;
+    transition-duration: 0.5s;
+    list-style: none;
+  }
+    
+  li a {
+    color: #fff;
+  }
+  
+  li:hover,
+  li:focus-within {
+    cursor: pointer;
+  }
+  
+  li:focus-within a {
+    outline: none;
+  }
+  
+  ul li ul {
+    visibility: hidden;
+    opacity: 0;
+    min-width: 5rem;
+    position: relative;
+    transition: all 0.5s ease;
+    margin-top: 1rem;
+    left: 0;
+    display: none;
+    list-style: none;
+    text-align: center;
+  }
+  
+  ul li:hover > ul,
+  ul li:focus-within > ul,
+  ul li ul:hover,
+  ul li ul:focus {
+     visibility: visible;
+     opacity: 1;
+     display: block;
+  }
+  
+  ul li ul li {
+    clear: both;
+    width: 100%;
+  }
+
 
 
 
