--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -135,7 +135,7 @@ nav {
             to bottom,
             rgba(76, 0, 19, 0.8),
             rgba(0, 0, 0, 0.8)
-    ), url(https://assets3.thrillist.com/v1/image/3053599/1584x1056/flatten;crop;webp=auto;jpeg_quality=50.jpg);
+    ), url(../images/DateSpot_background.png);
 }
 
 #homepage-description{
@@ -149,9 +149,14 @@ nav {
 
 /* Login Page */
 .redirect-to-signup {
+    margin-top: 15px;
     color: white;
     font-size: 1.75rem;
     font-weight: bold;
+}
+
+#loginForm button {
+    margin-top: 10px;
 }
 
 /* Signup Page */
@@ -160,6 +165,7 @@ nav {
 }
 
 .redirect-to-login {
+    margin-top: 15px;
     color: white;
     font-size: 1.75rem;
     font-weight: bold;
