updated H2 text when user changes settings

--- a/views/users/filters.handlebars
+++ b/views/users/filters.handlebars
@@ -2,7 +2,7 @@
     <form id="filtersForm" method="post">
         <h2 class="neon">CREATE ACCOUNT</h2>
         <div id="locationContainer">
-            <h2>Filters</h2>
+            <h2 id="filtersH2">Filters</h2>
             <div id="filtersBorder" class="slideContainer">
                 <div id="genderInterestBorder">
                     <label id="genderInterestLabel">Who are you interested in?</label>
