--- a/views/users/images.handlebars
+++ b/views/users/images.handlebars
@@ -1,7 +1,7 @@
 <div id="imagesContainer">
 
     <h2 class="neon">CREATE ACCOUNT</h2>
-    <h2>Now it's time to upload some photos</h2>
+    <h2 id="imagesH2">Now it's time to upload some photos</h2>
     <div id="imagesContainer2">
         <h3>Profile Picture</h3>
         <form id="form1" class="grid">
