--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -23,6 +23,13 @@
             </div>
             <a href="/users/login" class="redirect-to-login">Already have an account? Login here!</a>
         </section>
+        <section class="password-information">
+            A valid password has: <br>
+            At least 6 characters <br>
+            At least 1 uppercase letter <br>
+            At least 1 number <br>
+            At least 1 special character
+        </section>
     </form>
 </div>
 <p>{{error}}</p>
