--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -9,8 +9,8 @@
         <div id="swiper">
         </div>
         <div class="swipeInstructionDiv">
-            <p>Dislike</p>
-            <p>Like</p>
+            <p><-- Dislike</p>
+            <p>Like --></p>
         </div>
     </div>
 
