--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -174,12 +174,12 @@ nav {
 
 .password-information {
     position: absolute;
-    top: 200px;
+    top: 225px;
     left: 70%;
     width: 50px;
     height: 50px;
     color: white;
-    font-size: 1.75rem;
+    font-size: 1.50rem;
     font-weight: bold;
     text-align: left;
 }
@@ -676,16 +676,50 @@ h2 {
 }
 
 /* Match Page */
-.dl {
+.profileCard {
+    margin-top: 50px;
+    box-shadow: 0 18px 200px -60px black;
+    border-radius: 50px;
+    width: 400px;
+    position: relative;
+    backdrop-filter: blur(5px);
+    margin-left: 20px;
+}
+
+.profileCard h2 {
+    font-size: 35px;
+}
+
+.profileCard img {
+    width: 60%;
+    border-radius: 50px;
+}
+
+.machButton {
+    height: min-content;
+}
+
+/*.profileCard img:hover {*/
+/*    width: 200px;*/
+/*}*/
+
+.profile-card-info {
     color: white;
 }
 
+.profileCard dt {
+    font-size: 20px;
+}
 
+.profileCard dd {
+    font-size: 15px;
+    overflow-wrap: break-word;
+    padding: 0 15px;
+}
 
-
-
-
-
+.dlDiv {
+    margin: 10px 0;
+}
 
 
 
